src/objects/Honda_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <description>This is typically 5 digit numbers.</description>
        <inlineHelpText>This is typically 5 digit numbers.</inlineHelpText>
        <label>Dealer Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Honda_Vendor_Code__c</fullName>
        <description>The vendor code of the Blackpurl vendor which is Honda.</description>
        <inlineHelpText>The vendor code of the Blackpurl vendor which is Honda.</inlineHelpText>
        <label>Honda Vendor Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Honda_Web_API__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to enable/disable Honda API integration.</description>
        <inlineHelpText>Flag to enable/disable Honda API integration.</inlineHelpText>
        <label>Honda Web API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VO_Number__c</fullName>
        <label>VO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Key_Number__c</fullName>
        <description>Security key supplied to the dealer</description>
        <inlineHelpText>Security key supplied to the dealer</inlineHelpText>
        <label>Web Key Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Honda Configuration</label>
</CustomObject>